--- a/public_html/index.html
+++ b/public_html/index.html
@@ -83,16 +83,16 @@
                         <a class="page-scroll" href="#about">О приложении</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#schedule">Расписания</a>
+                        <a class="page-scroll" href="#features">Возможности</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Преимущества</a>
+                        <a class="page-scroll" href="#schedule">Расписание</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#portfolio">Наша команда</a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a class="page-scroll" href="#contact">Контакты</a>
+                        <a class="page-scroll" href="#comments">Отзывы</a>
                     </li>
                 </ul>
             </div>
@@ -106,7 +106,7 @@
             <div class="header-content-inner">
                 <h1>3D карта факультета<br>ПМ-ПУ</h1>
 		<br/>
-                <p>Прямо на Вашем смартфоне!</p>
+                <p>Прямо в Вашем смартфоне!</p>
 
 				<!-- VK Like Button
 				<div id="vk_like"></div>
@@ -130,7 +130,9 @@
                     <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
                         <img class="appstore" src="img/appstore_buttons/appstore.png"/>
                     </a>
-                    <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    <a href="android_builds/pm_map_2May16.apk">
+                        <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    </a>
                 </div>
 
                 <br>
@@ -148,7 +150,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Мы помогаем первокурсникам!</h2>
                     <hr class="light">
-                    <p class="text-faded">И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>
+                    <p class="text-faded">И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь, где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>
                     <!-- <a href="#" class="btn btn-default btn-xl">На!</a> -->
                 </div>
             </div>
@@ -169,7 +171,9 @@
                         — поиск кабинетов и преподавателей<br>
                         — загрузка и редактирование расписания<br>
                         — переход к кабинету по ссылке из расписания<br>
-                        — информация о текущей и следующей паре
+                        — информация о текущей и следующей паре<br><br>
+
+                        — чего-то не хватает? <a class="page-scroll" href="#comments">добавьте</a> свою идею!
                     </div>
                     <div class="features_phone_side">
                         <img src="img/presentation/mockuphone_screens/iphone5c_blue_angle1.png" />
@@ -202,39 +206,39 @@
 
 
 
-    <section id="services">
-        <div class="container">
+    <section id="services" style="padding-bottom: 70px;">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Наши преимущества</h2>
                     <hr class="primary">
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                         <h3>Лучшее в своём роде</h3>
                         <p class="text-muted">Вы не найдёте лучшего приложения карты ПМ-ПУ!</p>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                </div> -->
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Легковесность</h3>
                         <p class="text-muted">~40МБ</p>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                </div> -->
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Актуальность</h3>
                         <p class="text-muted">Расписание регулярно обновляется!</p>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                </div> -->
+                <div class="text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Сделано с любовью</h3>
@@ -245,7 +249,7 @@
         </div>
     </section>
 
-    <section class="bg-dark">
+    <section class="bg-dark" style="padding-bottom: 30px; padding-top:10px">
         <div class="container text-center">
             <div class="row">
                 <h2>Скачайте прямо сейчас!</h2>
@@ -253,7 +257,9 @@
                     <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
                         <img class="appstore" src="img/appstore_buttons/appstore.png"/>
                     </a>
-                    <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    <a href="android_builds/pm_map_2May16.apk">
+                        <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    </a>
                 </div>
             </div>
         </div>
@@ -263,7 +269,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Отзывы</h2>
+                    <h2 class="section-heading">Отзывы и идеи</h2>
                     <hr class="light">
 
                     <div class="vk_comments">
@@ -283,7 +289,7 @@
 
 
 
-    <section class="no-padding" id="portfolio" style="margin-top: 100px">
+    <!-- <section class="no-padding" id="portfolio" style="margin-top: 100px">
 
   		<div class="container">
             <div class="row">
@@ -388,11 +394,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
-    <section id="contact">
+    <section id="contact" class="bg-dark" style="padding-bottom: 20px; padding-top:50px">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -403,7 +409,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 text-center col-lg-offset-2">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <!-- <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i> -->
                     <p><a href="mailto:your-email@your-domain.com">pmpumap@gmail.com</a></p>
                 </div>
             </div>
@@ -439,7 +445,7 @@
 	</script>
 
 	<!-- User Report -->
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		var _urq = _urq || [];
 		_urq.push(['initSite', '036ad2cb-2361-4327-8463-fd047ebfecef']);
 		(function() {
@@ -447,7 +453,7 @@
 		ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur, s);
 		})();
-	</script>
+	</script> -->
 
 </body>
 
