added vk like button

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -108,12 +108,8 @@
 		<br/>
                 <p>Прямо в Вашем смартфоне!</p>
 
-				<!-- VK Like Button
-				<div id="vk_like"></div>
-				<script type="text/javascript">
-				VK.Widgets.Like("vk_like", {type: "button"});
-				</script>
-				-->
+
+
 
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Узнать больше</a>
                 <br>
@@ -133,6 +129,13 @@
                     <a href="android_builds/pm_map_2May16.apk">
                         <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
                     </a>
+                    <br><br>
+                    <!-- VK Like Button -->
+    				<div id="vk_like" style="    left: 50%;
+    margin-left: -45px;"></div>
+    				<script type="text/javascript">
+    				VK.Widgets.Like("vk_like", {type: "button"});
+    				</script>
                 </div>
 
                 <br>
@@ -171,7 +174,7 @@
                         — поиск кабинетов и преподавателей<br>
                         — загрузка и редактирование расписания<br>
                         — переход к кабинету по ссылке из расписания<br>
-                        — информация о текущей и следующей паре<br><br>
+                        — информация о текущей и следующей парах<br><br>
 
                         — чего-то не хватает? <a class="page-scroll" href="#comments">добавьте</a> свою идею!
                     </div>
