updated link to playstore

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -119,8 +119,11 @@
                     <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
                         <img class="appstore" src="img/appstore_buttons/appstore.png"/>
                     </a>
-                    <a href="android_builds/pm_map_2May16.apk">
+                    <!-- <a href="android_builds/pm_map_2May16.apk">
                         <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    </a> -->
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.george.pmmap">
+                        <img class="playstore" src="img/appstore_buttons/playstore-available.png"/>
                     </a>
                     <br><br>
                     <!-- VK Like Button -->
@@ -253,8 +256,11 @@
                     <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
                         <img class="appstore" src="img/appstore_buttons/appstore.png"/>
                     </a>
-                    <a href="android_builds/pm_map_2May16.apk">
+                    <!-- <a href="android_builds/pm_map_2May16.apk">
                         <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
+                    </a> -->
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.george.pmmap">
+                        <img class="playstore" style="height: 68.92px;" src="img/appstore_buttons/playstore-available.png"/>
                     </a>
                 </div>
             </div>
