--- a/public_html/index.html
+++ b/public_html/index.html
@@ -267,6 +267,8 @@
         </div>
     </section>
 
+
+<!--
     <section class="bg-primary" id="comments">
         <div class="container">
             <div class="row">
@@ -284,14 +286,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
 
 
 
-    <!-- <section class="no-padding" id="portfolio" style="margin-top: 100px">
+    <section class="no-padding" id="portfolio" style="margin-top: 100px">
 
   		<div class="container">
             <div class="row">
@@ -396,7 +398,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
