--- a/public_html/index.html
+++ b/public_html/index.html
@@ -268,7 +268,7 @@
     </section>
 
 
-<!--
+
     <section class="bg-primary" id="comments">
         <div class="container">
             <div class="row">
@@ -277,23 +277,22 @@
                     <hr class="light">
 
                     <div class="vk_comments">
-                        <!-- Put this div tag to the place, where the Comments block will be -->
                         <div id="vk_comments"></div>
                         <script type="text/javascript">
-                        VK.Widgets.Comments("vk_comments", {limit: 10, width: "320", attach: "*"});
+                        VK.Widgets.Comments("vk_comments", {limit: 10, width: "500", attach: "*"});
                         </script>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
 
 
 
-    <section class="no-padding" id="portfolio" style="margin-top: 100px">
+    <section id="portfolio" style="padding-bottom:0;">
 
   		<div class="container">
             <div class="row">
@@ -406,9 +405,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Мы открыты к сотрудничеству</h2>
+                    <h2 class="section-heading">Есть идеи?</h2>
                     <hr class="primary">
-                    <p>Хотите помочь в развитии приложения? Есть идеи?<br> Свяжитесь с нами:</p>
+                    <p>Напишите нам :)</p>
                 </div>
             </div>
             <div class="row">
