added versions history

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -139,6 +139,41 @@
                 <div class="top_presentation_small">
                     <img class="phone" src="img/presentation/mockuphone_screens/iphone6_silver_portrait.png"/>
                 </div>
+
+                <!-- VERSION HISTORY -->
+                <div id="version_history">
+                    <div class="vh_title">Новости обновлений</div>
+                    <div class="vh_versions">
+                      <div class="vh_ver">
+                          <div class="vh_ver_title">v1.2.1<span class="date">6 Сент 2016</span></div>
+                          <div class="vh_ver_desc">
+                            - слияние расписаний: теперь при обновлении расписания из Интернета все Ваши изменения/удаления сохраняются!*<br>
+                            - увеличена скорость загрузки приложения<br>
+                            - расписание при загрузке приложения открывается первым<br>
+                            - результаты поиска указываются маркерами на карте<br>
+                            - в расписание добавлены имена преподавателей<br>
+                            - улучшена анимация в помощнике добавления расписания<br>
+
+                            * Но при первом запуске после обновления расписание будет перезаписано с сайта.<br>
+
+                            Исправлено:<br>
+                            - приложение теперь не выключает Вашу музыку!<br>
+                          </div>
+                      </div>
+                      <div class="vh_ver">
+                          <div class="vh_ver_title">v1.1<span class="date">2 Сент 2016</span></div>
+                          <div class="vh_ver_desc">
+                            - исправлена ошибка при загрузке расписания<br>
+                            - повышена производительность скролла
+                          </div>
+                      </div>
+                      <div class="vh_ver">
+                          <div class="vh_ver_title">v1.0<span class="date">27 Апр 2016</span></div>
+                          <div class="vh_ver_desc"></div>
+                      </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </header>
@@ -149,7 +184,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Мы помогаем первокурсникам!</h2>
                     <hr class="light">
-                    <p class="text-faded">И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь, где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>
+                    <p>И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь, где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>
                     <!-- <a href="#" class="btn btn-default btn-xl">На!</a> -->
                 </div>
             </div>
@@ -279,7 +314,7 @@
                     <div class="vk_comments">
                         <div id="vk_comments"></div>
                         <script type="text/javascript">
-                        VK.Widgets.Comments("vk_comments", {limit: 10, width: "500", attach: "*"});
+                        VK.Widgets.Comments("vk_comments", {limit: 10, autoPublish: 0, attach: "*"});
                         </script>
                     </div>
                 </div>
