added Update News block

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -145,6 +145,15 @@
                     <div class="vh_title">Новости обновлений</div>
                     <div class="vh_versions">
                       <div class="vh_ver">
+                          <div class="vh_ver_title">v1.3<span class="date">18 Сент 2016</span></div>
+                          <div class="vh_ver_desc">
+                            - добавлен статус-бар! (Android)<br>
+                            - более быстрое редактирование расписания<br>
+                            - исправлены баги, связанные со слиянием расписаний<br>
+                            - несколько новых объектов на карте
+                          </div>
+                      </div>
+                      <div class="vh_ver">
                           <div class="vh_ver_title">v1.2.1<span class="date">6 Сент 2016</span></div>
                           <div class="vh_ver_desc">
                             - слияние расписаний: теперь при обновлении расписания из Интернета все Ваши изменения/удаления сохраняются!*<br>
