--- a/public_html/index.html
+++ b/public_html/index.html
@@ -145,6 +145,19 @@
                     <div class="vh_title">Новости обновлений</div>
                     <div class="vh_versions">
                       <div class="vh_ver">
+                          <div class="vh_ver_title">v1.4<span class="date">3 Окт 2016</span></div>
+                          <div class="vh_ver_desc">
+                            - добавлен iOS Today виджет, теперь узнать расписание на сегодня можно намного быстрее! (iOS)<br>
+                            - исправлен баг, связанный с перекрыванием нижней панели расписания системными кнопками (Android)
+                          </div>
+                      </div>
+                      <div class="vh_ver">
+                          <div class="vh_ver_title">v1.3.1<span class="date">21 Сент 2016</span></div>
+                          <div class="vh_ver_desc">
+                            - исправлен баг с форматом времени
+                          </div>
+                      </div>
+                      <div class="vh_ver">
                           <div class="vh_ver_title">v1.3<span class="date">18 Сент 2016</span></div>
                           <div class="vh_ver_desc">
                             - добавлен статус-бар! (Android)<br>
