--- a/public_html/index.html
+++ b/public_html/index.html
@@ -111,7 +111,7 @@
 
                 <div class="top_presentation">
                     <img class="phone1" src="img/presentation/mockuphone_screens/iphone5s_spacegrey_side1.png"/>
-                    <img class="phone2" src="img/presentation/mockuphone_screens/iphone6_silver_side2-1.png"/>
+                    <img class="phone2" src="img/presentation/mockuphone_screens/iphone6_silver_side2-1_winter.png"/>
                 </div>
 
 
@@ -144,6 +144,14 @@
                 <div id="version_history">
                     <div class="vh_title">Новости обновлений</div>
                     <div class="vh_versions">
+                        <div class="vh_ver">
+                          <div class="vh_ver_title">v1.5<span class="date">14 Дек 2016</span></div>
+                          <div class="vh_ver_desc">
+                            Добавлено:<br>
+                             - Новогоднее / рождественское настроение :)<br>
+                             - Расписание зачетов и экзаменов
+                          </div>
+                      </div>
                       <div class="vh_ver">
                           <div class="vh_ver_title">v1.4<span class="date">3 Окт 2016</span></div>
                           <div class="vh_ver_desc">
