removed vk commments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -88,12 +88,12 @@
                     <li>
                         <a class="page-scroll" href="#schedule">Расписание</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#portfolio">Наша команда</a>
-                    </li> -->
                     <li>
-                        <a class="page-scroll" href="#comments">Отзывы</a>
+                        <a class="page-scroll" href="#portfolio">Наша команда</a>
                     </li>
+                   <!--  <li>
+                        <a class="page-scroll" href="#comments">Отзывы</a>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -119,9 +119,6 @@
                     <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
                         <img class="appstore" src="img/appstore_buttons/appstore.png"/>
                     </a>
-                    <!-- <a href="android_builds/pm_map_2May16.apk">
-                        <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
-                    </a> -->
                     <a target="_blank" href="https://play.google.com/store/apps/details?id=com.george.pmmap">
                         <img class="playstore" src="img/appstore_buttons/playstore-available.png"/>
                     </a>
@@ -214,8 +211,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Мы помогаем первокурсникам!</h2>
                     <hr class="light">
-                    <p>И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь, где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>
-                    <!-- <a href="#" class="btn btn-default btn-xl">На!</a> -->
+                    <p>И не только. С нашей картой ни один студент никогда не заблудится на факультете! Не знаешь, где пара? Где найти преподавателя? Как попасть в запретный корпус? Наша 3D карта даст ответы на все вопросы!</p>                    
                 </div>
             </div>
         </div>
@@ -236,8 +232,6 @@
                         — загрузка и редактирование расписания<br>
                         — переход к кабинету по ссылке из расписания<br>
                         — информация о текущей и следующей парах<br><br>
-
-                        — чего-то не хватает? <a class="page-scroll" href="#comments">добавьте</a> свою идею!
                     </div>
                     <div class="features_phone_side">
                         <img src="img/presentation/mockuphone_screens/iphone5c_blue_angle1.png" />
@@ -270,99 +264,12 @@
 
 
 
-    <section id="services" style="padding-bottom: 70px;">
-        <!-- <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Наши преимущества</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div> -->
-        <div class="container">
-            <div class="row">
-                <!-- <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Лучшее в своём роде</h3>
-                        <p class="text-muted">Вы не найдёте лучшего приложения карты ПМ-ПУ!</p>
-                    </div>
-                </div> -->
-                <!-- <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Легковесность</h3>
-                        <p class="text-muted">~40МБ</p>
-                    </div>
-                </div> -->
-                <!-- <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Актуальность</h3>
-                        <p class="text-muted">Расписание регулярно обновляется!</p>
-                    </div>
-                </div> -->
-                <div class="text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Сделано с любовью</h3>
-                        <p class="text-muted">От студентов для студентов!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-dark" style="padding-bottom: 30px; padding-top:10px">
-        <div class="container text-center">
-            <div class="row">
-                <h2>Скачайте прямо сейчас!</h2>
-                <div class="store_buttons_bottom">
-                    <a target="_blank" href="https://itunes.apple.com/ru/app/karta-pm-pu-raspisanie-zanatij/id1105555392?mt=8">
-                        <img class="appstore" src="img/appstore_buttons/appstore.png"/>
-                    </a>
-                    <!-- <a href="android_builds/pm_map_2May16.apk">
-                        <img class="playstore" src="img/appstore_buttons/playstore-soon.png"/>
-                    </a> -->
-                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.george.pmmap">
-                        <img class="playstore" style="height: 68.92px;" src="img/appstore_buttons/playstore-available.png"/>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section class="bg-primary" id="comments">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Отзывы и идеи</h2>
-                    <hr class="light">
-
-                    <div class="vk_comments">
-                        <div id="vk_comments"></div>
-                        <script type="text/javascript">
-                        VK.Widgets.Comments("vk_comments", {limit: 10, autoPublish: 0, attach: "*"});
-                        </script>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-
-
     <section id="portfolio" style="padding-bottom:0;">
 
   		<div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Наша команда</h2>
+                    <h2 class="section-heading">Создатели</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -512,16 +419,7 @@
 
 	</script>
 
-	<!-- User Report -->
-	<!-- <script type="text/javascript">
-		var _urq = _urq || [];
-		_urq.push(['initSite', '036ad2cb-2361-4327-8463-fd047ebfecef']);
-		(function() {
-		var ur = document.createElement('script'); ur.type = 'text/javascript'; ur.async = true;
-		ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur, s);
-		})();
-	</script> -->
+	
 
 </body>
 
